Closed Bug 1269247 Opened 9 years ago Closed 9 years ago

crash in SkDraw::ShouldDrawTextAsPaths

Categories

(Core :: Graphics, defect)

Unspecified
Android
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: n.nethercote, Assigned: lsalzman)

References

Details

(Keywords: crash, Whiteboard: [gfx-noted])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-d708eeaa-7c02-4c19-9428-685322160501. ============================================================= New crash started happening in Fennec in Nightly 20160430030223. 8 crashes across 4 or 5 installations. > 0 libxul.so SkDraw::ShouldDrawTextAsPaths gfx/skia/skia/src/core/SkDraw.cpp > 1 libxul.so SkCanonicalizePaint::SkCanonicalizePaint gfx/skia/skia/src/core/SkPaint.cpp > 2 libxul.so SkPaint::getFontMetrics gfx/skia/skia/src/core/SkPaint.cpp > 3 libxul.so anp_getFontMetrics other-licenses/skia-npapi/ANPPaint.cpp > 4 libflashplayer.so NP_Shutdown > Ø 5 dalvik-heap (deleted) dalvik-heap (deleted)@0x12999553 > Ø 6 libGLESv2.so libGLESv2.so@0xa553 > 7 libflashplayer.so NP_Shutdown
lsalzman, can you please take a look?
(In reply to Nicholas Nethercote [:njn] from comment #0) > This bug was filed from the Socorro interface and is > report bp-d708eeaa-7c02-4c19-9428-685322160501. > ============================================================= > > New crash started happening in Fennec in Nightly 20160430030223. 8 crashes > across 4 or 5 installations. Which makes it the #1 Android Nightly topcrash.
Whiteboard: [gfx-noted]
Blocks: 1267180
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Attachment #8747707 - Flags: review?(mchang)
Attachment #8747707 - Flags: review?(mchang) → review+
Thank you for the fast fix.
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: