Bug 1269247 - check that SkPaint has a typeface before using it. r=mchang